release 1.5 (11-2010)
- Fixed issue 620
  http://java.net/jira/browse/JERSEY-620
  Exceptions thrown by a nullary constructor of a resource were incorrectly
  handled.
- Fixed issue 615
  http://java.net/jira/browse/JERSEY-615
  Removed unnecessary unused method
- Fixed issue (applied patch) 614
  http://java.net/jira/browse/JERSEY-614
  Code cleaning - clearing List by clear(), not by removeAll() 
- Fixed issue (applied patch) 613
  http://java.net/jira/browse/JERSEY-613
  Removed unnecessary allocation
- Fixed issue (applied patch) 612
  http://java.net/jira/browse/JERSEY-612
  Correcting charset check in AbstractListElementProvider
- Fixed issue (applied patch) 611
  http://java.net/jira/browse/JERSEY-611
  Code attempts to substring off a trailing / but doesn't assign
  the substring so the operation was lost.
- Fixed issue 610
  http://java.net/jira/browse/JERSEY-610
  Fixed adding headers (not just auth related) to requests without
  entity
- Fixed issue 606
  http://java.net/jira/browse/JERSEY-606
  Added null check for return value of OAuthProvider.newAccessToken(...)
- Fixed issue 132
  http://java.net/jira/browse/JERSEY-132
  Ability to have WebResource related properties
- OSGi headers added to Jersey OAuth modules
- Fixed issue 557
  http://java.net/jira/browse/JERSEY-557
  Spring integration: injection of Spring's ApplicationContext 
  should be possible using the @javax.ws.rs.core.Context annotation
- Fixed issue 596
  http://java.net/jira/browse/JERSEY-596
  When serializing parameters of the content-disposition header include a
  ' ' after the '; ' as this improves interoperability with services or clients
  that do not correctly parse content-disposition headers.
- Fixed issue 598
  http://java.net/jira/browse/JERSEY-598
  The Vary header is set if a call to Request.selectVariant is called.
- Fixed issue 600
  http://java.net/jira/browse/JERSEY-600
  Report errors if CDI-based Jersey injection targets for cannot be obtained.
- Fixed issue 597